--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#" class="logo">Nova</a>
+            <a href="#" class="logo">
+                Nova
+            </a>
             <div class="nav-links">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#blog" class="nav-link">Blog</a>
